1. Re-factored the source codes to more Android-styled